Update swagger docu
Fix OptimizationRecipe and add OptimizationExecution
