# src/models/OptimizationRecipe.ts
@@ -17,7 +17,7 @@ interface TreeRecipeStructure {
  *
  *  components:
  *    schemas:
- *      OptimizationAlgorithm:
+ *      OptimizationRecipe:
  *        allOf:
  *          - $ref: '#/components/schemas/JsonApiObject'
  *          - type: object
@@ -26,29 +26,14 @@ interface TreeRecipeStructure {
  *                type: object
  *                required:
  *                  - name
- *                  - inputs
- *                  - outputs
- *                  - dockerConfig
+ *                  - ingredients
  *                properties:
  *                  name:
  *                    type: string
- *                  inputs:
+ *                  ingredients:
  *                    type: array
  *                    items:
  *                      type: string
- *                  outputs:
- *                    type: string
- *                  dockerConfig:
- *                    type: object
- *                    required:
- *                      - name
- *                    properties:
- *                      name:
- *                        type: string
- *                      tag:
- *                        type: string
- *                      digest:
- *                        type: string
  */
 
 export class OptimizationRecipe extends Typegoose {
